Добавил обработку уведомления о трудовой деятельности по патенту с соответствующими состояниями и клавиатурами

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -429,5 +429,14 @@
             "title": "🏢 Укажите, кем выдан документ",
             "example_text": "Пример: ЗАГС Центрального района г. Санкт-Петербурга"
         }
+    },
+    "work_activity_start": {
+        "title": "📍 Сейчас мы оформим уведомление об осуществлении трудовой деятельности на основании патента",
+        "description": "Это необходимо для подачи в МВД в течение 2 рабочих дней после начала работы",
+        "documents_to_prepare": "Подготовьте: \n• Паспорт \n• Патент \n• Контракт или данные работодателя \n• Полис ДМС \n• Адрес проживания",
+        "buttons": {
+            "start_button": "🟢 Начать",
+            "cancel_button": "↩️ Назад"
+        }
     }
 }
