--- a/locales/ru.json
+++ b/locales/ru.json
@@ -438,5 +438,9 @@
             "start_button": "🟢 Начать",
             "cancel_button": "↩️ Назад"
         }
+    },
+    "work_activity_department_name": {
+        "title": "Пожалуйста, введите полное название отдела для подачи заявления (обычно это указано в вашей прошлой регистрации или миграционном документе)",
+        "example_text": "Например: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
     }
 }
