Добавил обработку полного названия отдела и соответствующие клавиатуры для трудовой деятельности по патенту; обновил локализации.

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -442,5 +442,22 @@
     "work_activity_department_name": {
         "title": "Пожалуйста, введите полное название отдела для подачи заявления (обычно это указано в вашей прошлой регистрации или миграционном документе)",
         "example_text": "Например: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
+    },
+    "work_activity_department_user_input": {
+        "title": "📋 Для документа будет указано:",
+        "title_dep": "Начальнику",
+        "description": "Если вы указали отдел неправильно, нажмите кнопку «↩️ Назад» и введите корректное название.",
+        "buttons":{
+            "correct_btn": "✅ Всё верно",
+            "cancel_button": "↩️ Назад"
+        }
+    },
+    "work_activity_passport_req": {
+        "title": "📄 У вас на руках есть паспорт?",
+        "description": "Как хотите заполнить данные?",
+        "buttons": {
+            "passport_photo":"📸 Загрузить фото документа (автоматически)",
+            "photo_manual": "✏️ Ввести вручную"
+        }
     }
 }
