Добавил пару новвоведений

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -282,6 +282,18 @@
         "all_true_in_stamp_button": "✅ Всё верно – сформировать документ",
         "change_data_stamp_button": "✏️ Изменить"
     },
+    "arrival_migr_info": {
+        "title": "Проверь, всё ли правильно:",
+        "full_name": "👤 ФИО: ",
+        "old_passport": "🌍 Гражданство: ",
+        "new_passport": "📆 Дата въезда: ",
+        "issue_date": " 📍 Пункт въезда: ",
+        "stamp_in": " 🎯 Цель въезда: ",
+        "adress": " 🆔 Серия / № карты: ",
+        "phone": "📅 Срок пребывания до: ",
+        "all_true_in_stamp_button": "✅ Всё верно",
+        "change_data_stamp_button": "✏️ Изменить одно из полей"
+    },
     "registration_renewal_start": {
         "title": "📍 Сейчас мы оформим заявление о продлении \nвременного пребывания в РФ",
         "description": " Это нужно, если Вы находитесь в России по патенту,\nбраку или с ребёнком, и срок Вашего пребывания \nподходит к концу",
