Добавление по миграционному учету

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -221,7 +221,8 @@
     },
     "ur_job": {
         "title": "👨‍🔧 Отправьте название вашей профессии",
-        "example": "Пример: разнорабочий"
+        "example": "Пример: разнорабочий",
+        "no_work": "Не работаю"
     },
     "status_expectation": {
         "title": "🔄 Вся информация принята, формирую документ для печати... (ожидание менее 1 минуты)"
@@ -253,7 +254,7 @@
         "example": " Пример: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ» (или сокращённо: ООО «ФОРМАТ»)"
     },
     "inn_org_migr_card_arrival": {
-        "title": "🧾 Укажите <b>ИНН организации</b> (если есть)  Пример: 7811298765",
+        "title": "🧾 Укажите <b>ИНН организации</b> (если есть)",
         "example": "Пример: 7811298765",
         "no": "Нет ИНН"
     },
@@ -294,6 +295,29 @@
         "all_true_in_stamp_button": "✅ Всё верно",
         "change_data_stamp_button": "✏️ Изменить одно из полей"
     },
+    "organisation_info_correct": {
+        "title": "Проверь, всё ли правильно:",
+        "full_name": "👤 ФИО: ",
+        "citizenship": "🗓 Дата рождения: ",
+        "old_passport": "🌍 Гражданство: ",
+        "passport": " 📄 Паспорт: ",
+        "issue_info":" выдан: ",
+        "issue_date":" срок действия ",
+        "issue_passport":" FA ",
+        "issue_migr_card_info": "въезд",
+        "issue_migr_card": " Серия ",
+        "name_of_org":"• Наименование:",
+        "inn_of_org":"• ИНН:",
+        "adress_of_org":"• Адрес:",
+        "fio_contact_face_of_org": "• ФИО контактного лица:",
+        "phone_contact_face_of_org": "• Телефон:",
+        "adress_live_in_rf": "📌 Адрес проживания в РФ: ",
+        "migr_card": "📎 Миграционная карта: ",
+        "goal": "🎯 Цель въезда: ",
+        "profession": "🧰 Профессия: ",
+        "whoaccept": " 👥 Принимающая сторона: ",
+        "doc": "📄 Документ, подтверждающий право пользования помещением"
+    },
     "registration_renewal_start": {
         "title": "📍 Сейчас мы оформим заявление о продлении \nвременного пребывания в РФ",
         "description": " Это нужно, если Вы находитесь в России по патенту,\nбраку или с ребёнком, и срок Вашего пребывания \nподходит к концу",
@@ -319,6 +343,11 @@
         "description": "Отлично. Сейчас соберём нужные данные. Вы можете\nзагрузить документ 📸 или ввести его вручную ✍️.",
         "residence_reason_byphoto": "📸 Загрузить фото документа (автоматически)",
         "residence_reason_manual": "✏️ Ввести вручную"
+    },
+    "phone_contact_of_organization": {
+        "title": "☎️ Введите номер телефона контактного лица (при наличии)",
+        "example": "Пример: 79809008090",
+        "not_have_phone": "Нет номера"
     },
     "residence_reason_manual_patient_messages": {
         "patient_number": {
