--- a/locales/ru.json
+++ b/locales/ru.json
@@ -471,5 +471,12 @@
             "passport_photo":"📸 Загрузить фото документа (автоматически)",
             "photo_manual": "✏️ Ввести вручную"
         }
+    },
+    "wa_passport_title": "📝 Давайте заполним данные паспорта вручную:",
+    "wa_patent": {
+        "wa_patent_start": {
+            "title": "Отлично. Сейчас соберём нужные данные.",
+            "description": "Вы можете загрузить патент или ввести его вручную"
+        }
     }
 }
