Add residence reason handling for child; implement state management and keyboard options

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -101,7 +101,7 @@
         "title": "Пожалуйста, выберите, для кого оформляется документ",
         "btn_adult": "🧍 На себя (взрослого)",
         "btn_kid": "🧒 На ребёнка",
-        "back":"↩️ Назад"
+        "back": "↩️ Назад"
     },
     "phone_number": {
         "title": "☎️ Введите ваш актуальный номер телефона",
@@ -301,14 +301,14 @@
         "citizenship": "🗓 Дата рождения: ",
         "old_passport": "🌍 Гражданство: ",
         "passport": " 📄 Паспорт: ",
-        "issue_info":" выдан: ",
-        "issue_date":" срок действия ",
-        "issue_passport":" FA ",
+        "issue_info": " выдан: ",
+        "issue_date": " срок действия ",
+        "issue_passport": " FA ",
         "issue_migr_card_info": "въезд",
         "issue_migr_card": " Серия ",
-        "name_of_org":"• Наименование:",
-        "inn_of_org":"• ИНН:",
-        "adress_of_org":"• Адрес:",
+        "name_of_org": "• Наименование:",
+        "inn_of_org": "• ИНН:",
+        "adress_of_org": "• Адрес:",
         "fio_contact_face_of_org": "• ФИО контактного лица:",
         "phone_contact_face_of_org": "• Телефон:",
         "adress_live_in_rf": "📌 Адрес проживания в РФ: ",
@@ -371,7 +371,7 @@
         "passport": "📄 Паспорт: ",
         "issue_date": ", выдан ",
         "adress": "📍 Адрес проживания в РФ: ",
-        "residence_reason": "📌 Основание для продления: ",
+        "residence_reason": "📌 Основание для продления: Патент",
         "patient_number": " 📄 Серия и номер патента: ",
         "patient_date": "🗓 Дата выдачи патента: ",
         "patient_issue_place": "🏢 Кем выдан патент: ",
@@ -488,7 +488,7 @@
         "title": "📋 Для документа будет указано:",
         "title_dep": "Начальнику",
         "description": "Если вы указали отдел неправильно, нажмите кнопку «↩️ Назад» и введите корректное название.",
-        "buttons":{
+        "buttons": {
             "correct_btn": "✅ Всё верно",
             "cancel_button": "↩️ Назад"
         }
@@ -497,8 +497,71 @@
         "title": "📄 У вас на руках есть паспорт?",
         "description": "Как хотите заполнить данные?",
         "buttons": {
-            "passport_photo":"📸 Загрузить фото документа (автоматически)",
+            "passport_photo": "📸 Загрузить фото документа (автоматически)",
             "photo_manual": "✏️ Ввести вручную"
         }
+    },
+    "residence_reason_manual_child_messages": {
+        "child_fio": {
+            "title": "📝 Давайте заполним данные ребёнка:",
+            "description": "Вводите, пожалуйста, только на кириллице.",
+            "name_text": "👶 ФИО ребёнка",
+            "example_text": "Пример: РАСУЛОВА МАХЛИЁ АЗИЗОВНА"
+        },
+        "child_birth_date": {
+            "title": "📆 Введите дату рождения в формате ДД.ММ.ГГГГ",
+            "example_text": "Пример: 14.08.1996"
+        },
+        "child_citizenship": {
+            "title": "🌍 Укажите гражданство (на кириллице)",
+            "example_text": "Пример: Узбекистан"
+        },
+        "child_birth_cert_number": {
+            "title": "📇 Укажите номер свидетельства о рождении",
+            "example_text": "Пример: №123456"
+        },
+        "child_birth_cert_issue_place": {
+            "title": "🏢 Укажите, кем выдан документ",
+            "example_text": "Пример: ЗАГС Центрального района г. Санкт-Петербурга"
+        },
+        "who_for_child": {
+            "description": "🧑 Укажите степень родства (кем вы приходитесь ребёнку)",
+            "mother_btn": "Мать",
+            "father_btn": "Отец",
+            "guardian_btn": "Опекун"
+        }
+    },
+    "registration_renewal_marriage_check_data": {
+        "title": "Проверь, всё ли правильно:",
+        "full_name": "👤 ФИО: ",
+        "birth_date": "🗓 Дата рождения: ",
+        "citizenship": "🌍 Гражданство: ",
+        "passport": "📄 Паспорт: ",
+        "issue_date": ", выдан ",
+        "issue_place": ", выданo ",
+        "adress": "📍 Адрес проживания в РФ: ",
+        "residence_reason": "💍 Основание для продления: Брак с гражданином РФ",
+        "spouse_fio": "👥 ФИО супруга: ",
+        "marriage_citizenship": " 🌍 Гражданство супруга: Российская Федерация",
+        "marriage_certificate_number": "📄 Свидетельство о браке: ",
+        "all_true_in_registration_renewal_marriage_button": "✅ Всё верно – сформировать документ",
+        "change_registration_renewal_marriage_data_button": "✏️ Изменить"
+    },
+    "registration_renewal_child_check_data": {
+        "title": "Проверь, всё ли правильно:",
+        "full_name": "👤 ФИО: ",
+        "birth_date": "🗓 Дата рождения: ",
+        "citizenship": "🌍 Гражданство: ",
+        "passport": "📄 Паспорт: ",
+        "issue_date": ", выдан ",
+        "issue_place": ", выданo ",
+        "adress": "📍 Адрес проживания в РФ: ",
+        "residence_reason": " 👶 Основание для продления: Наличие ребёнка — \nгражданина РФ",
+        "child_fio": "👥 ФИО ребенка: ",
+        "child_birth_date": "🗓 Дата рождения ребёнка: ",
+        "child_citizenship": " 🌍 Гражданство ребенка: Российская Федерация",
+        "child_certificate_number": "📄 Свидетельство о рождении: ",
+        "all_true_in_registration_renewal_child_button": "✅ Всё верно – сформировать документ",
+        "change_registration_renewal_child_data_button": "✏️ Изменить"
     }
 }
