Добавил обработку данных патента и медицинской политики; обновил локализации и состояния для патентной деятельности

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -477,6 +477,17 @@
         "wa_patent_start": {
             "title": "Отлично. Сейчас соберём нужные данные.",
             "description": "Вы можете загрузить патент или ввести его вручную"
+        },
+        "wa_patent_medical_policy": {
+            "name_work": {
+                "title": "👨‍🔧 Отправьте название вашей профессии",
+                "description": "📌 Важно: иностранец имеет право работать только по профессии, указанной в патенте.",
+                "example": "Пример: Разнорабочий"
+            },
+            "employer_address": {
+                "title": "📍 Укажите юридический адрес работодателя в формате: индекс, город, улица, корпус, дом (используйте кириллицу)",
+                "example": "Пример: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
+            }
         }
     }
 }
