Добавил обработку ИНН и номера телефона в медицинской политике; обновил локализации и состояния для патентной деятельности

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -487,7 +487,13 @@
             "employer_address": {
                 "title": "📍 Укажите юридический адрес работодателя в формате: индекс, город, улица, корпус, дом (используйте кириллицу)",
                 "example": "Пример: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
+            },
+            "INN": {
+                "title": "🔢 Укажите ваш ИНН",
+                "format": "Формат: 10 или 12 цифр",
+                "example": "Пример: 7701234567"
             }
+
         }
     }
 }
