Добавил обработку номера медицинского полиса и страховой компании; обновил локализации и состояния для работы с медицинской политикой

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -493,7 +493,19 @@
                 "format": "Формат: 10 или 12 цифр",
                 "example": "Пример: 7701234567"
             }
-
+        },
+        "wa_patent_medical_policy_number": {
+            "title": "ℹ️ По закону у вас должен быть действующий полис ДМС на весь срок трудовой деятельности. Эти данные будут включены в уведомление для МВД.",
+            "description": "✍️ Укажите номер вашего полиса ДМС",
+            "example": "Пример: ДМС‑927134 или 2147/МСК‑2025"
+        },
+        "wa_patent_insurance_company": {
+            "title": "🏥 Укажите, какая страховая компания выдала полис",
+            "example": "Пример: РЕСО‑Гарантия, Ингосстрах, Согласие"
+        },
+        "wa_polis_date": {
+            "title": "📅 Укажите срок действия полиса ДМС",
+            "description": "Введите даты начала и окончания действия в формате:  с 15.06.2025 по 14.06.2026"
         }
     }
 }
