Добавил обработку срока действия полиса и клавиатуру подтверждения данных полиса; обновил локализации для работы с медицинской политикой

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -506,6 +506,17 @@
         "wa_polis_date": {
             "title": "📅 Укажите срок действия полиса ДМС",
             "description": "Введите даты начала и окончания действия в формате:  с 15.06.2025 по 14.06.2026"
+        },
+        "wa_police_prof": {
+            "title": "📋 Подтверждение:",
+            "policy": "🩺 Полис ДМС:",
+            "number_policy": "• Номер:",
+            "company": "• Страховая компания:",
+            "valid": "• Действует:",
+            "buttons": {
+                "accept": "✅ Всё верно",
+                "edit": "✏️ Изменить одно из полей"
+            }
         }
     }
 }
