Добавил функциональность редактирования данных полиса ДМС; обновил клавиатуры и локализации для выбора полей редактирования

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -517,6 +517,15 @@
                 "accept": "✅ Всё верно",
                 "edit": "✏️ Изменить одно из полей"
             }
+        },
+        "wa_edit_police_data": {
+            "title": "🖊 Какое поле хотите изменить?",
+            "buttons": {
+                "number_polis": "🔢 Номер полиса",
+                "company_polis": "🏢 Страховая компания",
+                "dateof_polise": "📅 Срок действия",
+                "back_polise": "↩️ Назад"
+            }
         }
     }
 }
