--- a/locales/ru.json
+++ b/locales/ru.json
@@ -507,24 +507,19 @@
             "title": "📅 Укажите срок действия полиса ДМС",
             "description": "Введите даты начала и окончания действия в формате:  с 15.06.2025 по 14.06.2026"
         },
-        "wa_police_prof": {
+        "edit_wa_data": {
             "title": "📋 Подтверждение:",
-            "policy": "🩺 Полис ДМС:",
-            "number_policy": "• Номер:",
-            "company": "• Страховая компания:",
-            "valid": "• Действует:",
+            "full_name": "👤 ФИО:",
+            "passport": "📄 Паспорт:",
+            "patent": "📎 Патент:",
+            "work_adress": "🏠 Адрес места работы:",
+            "profession": "🏢 Профессия:",
+            "inn": "📄 ИНН",
+            "policy": "🩺 Полис:",
+            "phone_number": "📞 Номер телефона:",
             "buttons": {
                 "accept": "✅ Всё верно",
-                "edit": "✏️ Изменить одно из полей"
-            }
-        },
-        "wa_edit_police_data": {
-            "title": "🖊 Какое поле хотите изменить?",
-            "buttons": {
-                "number_polis": "🔢 Номер полиса",
-                "company_polis": "🏢 Страховая компания",
-                "dateof_polise": "📅 Срок действия",
-                "back_polise": "↩️ Назад"
+                "edit": "✏️ Изменить"
             }
         }
     }
