Обновление локализации для улучшения пользовательского интерфейса

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -606,7 +606,7 @@
             "patent": "📎 Патент:",
             "work_adress": "🏠 Адрес места работы:",
             "profession": "🏢 Профессия:",
-            "inn": "📄 ИНН",
+            "inn": "📄 ИНН:",
             "policy": "🩺 Полис:",
             "phone_number": "📞 Номер телефона:",
             "buttons": {
