Добавлено новое действие для редактирования данных патента и обновлен текст локализации для редактора данных

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -613,6 +613,9 @@
                 "accept": "✅ Всё верно",
                 "edit": "✏️ Изменить"
             }
+        },
+        "wa_data_editor": {
+            "title": "🖊 Какое поле хотите изменить?"
         }
     }
 }
