--- a/locales/ru.json
+++ b/locales/ru.json
@@ -698,6 +698,7 @@
         "citizenship": "🌍 Гражданство: ",
         "passport": "📄 Паспорт: ",
         "passport_issue": ", выдан ",
+        "expiry_date":" cрок действия: ",
         "residence_permit_number": "📄 ВНЖ: №",
         "residence_permit_issue": ", выдан ",
         "comma_separator": ", ",
@@ -746,5 +747,6 @@
             "btn_yes": "✅ Всё верно",
             "btn_edit": "✏️ Изменить"
         }
-    }
+    },
+    "adress_residence_permit":"🏠 Введите адрес, где вы проживаете в РФ\nФормат: индекс, страна, город, улица, дом, корпус, квартира"
 }
