Добавлено редактирование данных патента и обновлены локализации для редактора данных

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -601,21 +601,33 @@
         },
         "edit_wa_data": {
             "title": "📋 Подтверждение:",
-            "full_name": "👤 ФИО:",
-            "passport": "📄 Паспорт:",
-            "patent": "📎 Патент:",
-            "work_adress": "🏠 Адрес места работы:",
-            "profession": "🏢 Профессия:",
-            "inn": "📄 ИНН:",
-            "policy": "🩺 Полис:",
-            "phone_number": "📞 Номер телефона:",
+            "full_name": "👤 ФИО",
+            "passport": "📄 Паспорт",
+            "patent": "📎 Патент",
+            "work_adress": "🏠 Адрес места работы",
+            "profession": "🏢 Профессия",
+            "inn": "📄 ИНН",
+            "policy": "🩺 Полис",
+            "phone_number": "📞 Номер телефона",
             "buttons": {
                 "accept": "✅ Всё верно",
-                "edit": "✏️ Изменить"
+                "edit": "✏️ Изменить",
+                "back_button": "↩️ Назад"
             }
         },
         "wa_data_editor": {
-            "title": "🖊 Какое поле хотите изменить?"
+            "title": "🖊 Какое поле хотите изменить?",
+            "sub_editor_data": {
+                "policy": {
+                    "title":"Что именно изменить в данных страхового полиса?",
+                    "buttons":{
+                        "policy_number": "🔢 Номер полиса",
+                        "company": "🏢 Страховая компания",
+                        "dateof": "📅 Срок действия"
+                    }
+                }
+                    
+            }
         }
     },
     "doc_residence_notification_start": {
