Добавлено редактирование данных паспорта и соответствующая локализация

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -625,6 +625,19 @@
                         "company": "🏢 Страховая компания",
                         "dateof": "📅 Срок действия"
                     }
+                },
+                "passport": {
+                    "title": "📝 Что именно изменить в данных паспорта?",
+                    "passport_serial_number": "📇 Укажите серию и номер документа\n\nПример: №1225673",
+                    "passport_issue_date": "🗓 Укажите дату выдачи (ДД.ММ.ГГГГ)\n\nПример: 14.08.1996",
+                    "passport_issued": "🏢 Укажите, кем выдан документ\n\nПример: МВД Узбекистана",
+                    "passport_expiry_date": "🗓 Укажите срок действия паспорта (ДД.ММ.ГГГГ)",
+                    "buttons": {
+                        "serial_number": "🔢 Серия номер",
+                        "date_issue":"📆 Дата выдачи",
+                        "issued_by":"🏢 Кем выдан",
+                        "validity_period": "📅 Срок действия"
+                    }
                 }
                     
             }
