Доработки по 1 доку

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -300,7 +300,7 @@
         "title": "Проверь, всё ли правильно:",
         "full_name": "👤 ФИО: ",
         "data_birthday": "🗓 Дата рождения: ",
-        "old_passport": "🌍 Гражданство: ",
+        "citizenship": "🌍 Гражданство: ",
         "passport": " 📄 Паспорт: ",
         "issue_info": ", выдан: ",
         "issue_date": ", срок действия ",
