--- a/locales/ru.json
+++ b/locales/ru.json
@@ -638,6 +638,17 @@
                         "issued_by":"🏢 Кем выдан",
                         "validity_period": "📅 Срок действия"
                     }
+                },
+                "patent": {
+                    "title": "Что именно изменить в данных патента?",
+                    "patient_number": "📇 Введите номер патента\nПример: 78-324112233",
+                    "patient_date": "📆 Введите дату выдачи патента (ДД.ММ.ГГГГ)\nПример: 14.06.2024",
+                    "patient_issue_place": "🏢 Укажите, кем выдан документ\nПример:  ГУ МВД России по г. Санкт-Петербургу",
+                    "buttons": {
+                        "serial_number": "🔢 Серия номер",
+                        "date_issue":"📆 Дата выдачи",
+                        "issued_by":"🏢 Кем выдан"
+                    }
                 }
                     
             }
