--- a/locales/ru.json
+++ b/locales/ru.json
@@ -649,6 +649,9 @@
                         "date_issue":"📆 Дата выдачи",
                         "issued_by":"🏢 Кем выдан"
                     }
+                },
+                "phone_number": {
+                    "title": "☎️ Введите ваш актуальный номер телефона\n\nПример: 79809008090"
                 }
                     
             }
