Добавлено новое действие для изменения данных перед генерацией штампа и обновлены текстовые локализации

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -701,7 +701,7 @@
         "citizenship": "🌍 Гражданство: ",
         "passport": "📄 Паспорт: ",
         "passport_issue": ", выдан ",
-        "expiry_date":" cрок действия: ",
+        "expiry_date": " cрок действия: ",
         "residence_permit_number": "📄 ВНЖ: №",
         "residence_permit_issue": ", выдан ",
         "comma_separator": ", ",
@@ -726,7 +726,7 @@
         "btn_yes": "✅ Всё верно",
         "btn_edit": "✏️ Изменить"
     },
-    "income_last_year":{
+    "income_last_year": {
         "message_1": {
             "title": "📍Укажите подтвержденный доход за последний год",
             "form_3_NDFL_em": "📄 Налоговая декларация (форма 3‑НДФЛ)",
@@ -735,7 +735,6 @@
             "form_2_NDFL": "Справка от работодателя (2‑НДФЛ)",
             "btn_0": "🚫 У меня не было дохода",
             "btn_back": "↩️ Назад"
-
         },
         "message_2": {
             "title": "Вы выбрали:",
@@ -751,5 +750,8 @@
             "btn_edit": "✏️ Изменить"
         }
     },
-    "adress_residence_permit":"🏠 Введите адрес, где вы проживаете в РФ\nФормат: индекс, страна, город, улица, дом, корпус, квартира"
+    "adress_residence_permit": "🏠 Введите адрес, где вы проживаете в РФ\nФормат: индекс, страна, город, улица, дом, корпус, квартира",
+    "stamp_transfer_change_data_before_gen": {
+        "": ""
+    }
 }
