upd: Обновил переводы

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -10,7 +10,7 @@
   },
   "work_activity_department_name": {
     "title": "الرجاء إدخال الاسم الكامل للإدارة لتقديم طلب (عادة ما يشار إلى هذا في آخر مستند التسجيل أو الترحيل)",
-    "example_text": "على سبيل المثال: وزارة الشؤون الداخلية للفرن في منطقة بيرورسكي في سانت بطرسبرغ"
+    "example_text": "على سبيل المثال: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
   },
   "work_activity_department_user_input": {
     "title": "📋 ستشير المستند:",
@@ -39,11 +39,11 @@
       "name_work": {
         "title": "👨‍🔧 أرسل اسم مهنتك",
         "description": "📌 مهم: الأجنبي له الحق في العمل إلا من خلال المهنة المشار إليها في براءة الاختراع.",
-        "example": "مثال: هانيدان"
+        "example": "مثال: Разнорабочий"
       },
       "employer_address": {
         "title": "📍 أشر إلى العنوان القانوني لصاحب العمل بالتنسيق: الفهرس ، المدينة ، الشارع ، الفيلق ، البيت (استخدام السيريليك)",
-        "example": "مثال: 196211 St. Petersburg ، Tynova Street ، House 27"
+        "example": "مثال: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 حدد القصدير الخاص بك",
@@ -58,7 +58,7 @@
     },
     "wa_patent_insurance_company": {
       "title": "🏥 حدد شركة التأمين التي أصدرت بوليصة",
-      "example": "مثال: Reso -harthic ، Ingosstrakh ، الموافقة"
+      "example": "مثال: РЕСО‑Гарантия, Ингосстрах, Согласие"
     },
     "wa_polis_date": {
       "title": "📅 أشير إلى فترة صحة سياسة VHI",
