--- a/locales/hi.json
+++ b/locales/hi.json
@@ -10,7 +10,7 @@
   },
   "work_activity_department_name": {
     "title": "कृपया एक आवेदन जमा करने के लिए विभाग का पूरा नाम दर्ज करें (आमतौर पर यह आपके अंतिम पंजीकरण या माइग्रेशन दस्तावेज़ में इंगित किया जाता है)",
-    "example_text": "उदाहरण के लिए: सेंट पीटर्सबर्ग के प्राइमरस्की जिले में रूस के आंतरिक मामलों के ओवीएम मंत्रालय"
+    "example_text": "उदाहरण के लिए: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
   },
   "work_activity_department_user_input": {
     "title": "📋 दस्तावेज़ इंगित करेगा:",
@@ -39,11 +39,11 @@
       "name_work": {
         "title": "👨‍🔧 अपने पेशे का नाम भेजें",
         "description": "📌 महत्वपूर्ण: एक विदेशी को पेटेंट में संकेतित पेशे से केवल काम करने का अधिकार है।",
-        "example": "उदाहरण: अप्रेंटिस"
+        "example": "उदाहरण: Разнорабочий"
       },
       "employer_address": {
         "title": "📍 प्रारूप में नियोक्ता के कानूनी पते को इंगित करें: इंडेक्स, सिटी, स्ट्रीट, कॉर्प्स, हाउस (उपयोग साइरिलिक)",
-        "example": "उदाहरण: 196211 सेंट पीटर्सबर्ग, टायनोवा स्ट्रीट, हाउस 27"
+        "example": "उदाहरण: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 अपने टिन को निर्दिष्ट करें",
@@ -57,8 +57,8 @@
       "example": "उदाहरण: ДМС‑927134 или 2147/МСК‑2025"
     },
     "wa_patent_insurance_company": {
-      "title": "🏥 इंगित करें कि किस बीमा कंपनी ने एक पॉलिसी जारी की है",
-      "example": "उदाहरण: Reso -Harthic, Ingosstrakh, सहमति"
+      "title": "🏥 इंगित करें कि किस बीमा कंपनी ने पॉलिसी जारी की",
+      "example": "उदाहरण: РЕСО‑Гарантия, Ингосстрах, Согласие"
     },
     "wa_polis_date": {
       "title": "📅 वीएचआई नीति की वैधता अवधि का संकेत दें",
