--- a/locales/az.json
+++ b/locales/az.json
@@ -10,7 +10,7 @@
   },
   "work_activity_department_name": {
     "title": "Zəhmət olmasa bir ərizə təqdim etmək üçün şöbənin tam adını daxil edin (adətən bu son qeydiniz və ya miqrasiya sənədinizdə göstərilmişdir)",
-    "example_text": "Məsələn: Sankt-Peterburqun Primorsky rayonunda Rusiya Daxili İşlər Nazirliyi"
+    "example_text": "Məsələn: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
   },
   "work_activity_department_user_input": {
     "title": "📋 Sənəd göstərəcək:",
@@ -39,11 +39,11 @@
       "name_work": {
         "title": "👨🔧 Peşə adını göndərin",
         "description": "📌 Əhəmiyyətli: Bir əcnəbi yalnız patentdə göstərilən peşə tərəfindən işləmək hüququ var.",
-        "example": "Məsələn: Handyman"
+        "example": "Misal: Разнорабочий"
       },
       "employer_address": {
         "title": "📍 İşəgötürənin formatında hüquqi ünvanı göstərin: indeks, şəhər, küçə, korpus, ev (kiril istifadə edin)",
-        "example": "Misal: 196211 Sankt-Peterburq, Tynova küçəsi, ev 27"
+        "example": "Misal: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 The qalayınızı göstərin",
@@ -58,7 +58,7 @@
     },
     "wa_patent_insurance_company": {
       "title": "🏥 The Hansı sığorta şirkətinin bir siyasət yaratdığını göstərin",
-      "example": "Məsələn: Reso -Harhic, Ingosstrakh, razılıq"
+      "example": "Misal: РЕСО‑Гарантия, Ингосстрах, Согласие"
     },
     "wa_polis_date": {
       "title": "📅 Vhi, VHI siyasətinin etibarlılıq müddətini göstərin",
