upd: эксперементирую со скриптом автоперевода

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -42,12 +42,12 @@
         "example": "مثال: Разнорабочий"
       },
       "employer_address": {
-        "title": "📍 أشر إلى العنوان القانوني لصاحب العمل بالتنسيق: الفهرس ، المدينة ، الشارع ، الفيلق ، البيت (استخدام السيريليك)",
+        "title": "📍 أشر إلى العنوان القانوني لصاحب العمل بالتنسيق: индекс, город, улица, корпус, дом (используйте кириллицу)",
         "example": "مثال: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 حدد القصدير الخاص بك",
-        "format": "التنسيق: 10 أو 12 رقمًا",
+        "format": "شكل: 10 или 12 цифр",
         "example": "مثال: 7701234567"
       }
     },
@@ -62,7 +62,7 @@
     },
     "wa_polis_date": {
       "title": "📅 أشير إلى فترة صحة سياسة VHI",
-      "description": "أدخل تواريخ بداية ونهاية الإجراء بالتنسيق: من 06/15/2025 إلى 06/14/2026"
+      "description": "أدخل تواريخ البدء والنهاية للعمل بالتنسيق: с 15.06.2025 по 14.06.2026"
     },
     "edit_wa_data": {
       "title": "📋 التأكيد:",
