--- a/locales/hi.json
+++ b/locales/hi.json
@@ -42,12 +42,12 @@
         "example": "उदाहरण: Разнорабочий"
       },
       "employer_address": {
-        "title": "📍 प्रारूप में नियोक्ता के कानूनी पते को इंगित करें: इंडेक्स, सिटी, स्ट्रीट, कॉर्प्स, हाउस (उपयोग साइरिलिक)",
+        "title": "📍 प्रारूप में नियोक्ता के कानूनी पते को इंगित करें: индекс, город, улица, корпус, дом (используйте кириллицу)",
         "example": "उदाहरण: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 अपने टिन को निर्दिष्ट करें",
-        "format": "प्रारूप: 10 या 12 अंक",
+        "format": "प्रारूप: 10 или 12 цифр",
         "example": "उदाहरण: 7701234567"
       }
     },
@@ -62,7 +62,7 @@
     },
     "wa_polis_date": {
       "title": "📅 वीएचआई नीति की वैधता अवधि का संकेत दें",
-      "description": "प्रारूप में कार्रवाई की शुरुआत और अंत की तिथियां दर्ज करें: 06/15/2025 से 06/14/2026 तक"
+      "description": "प्रारूप में कार्रवाई की शुरुआत और अंत तिथियां दर्ज करें: с 15.06.2025 по 14.06.2026"
     },
     "edit_wa_data": {
       "title": "📋 पुष्टि:",
