--- a/locales/ky.json
+++ b/locales/ky.json
@@ -42,12 +42,12 @@
         "example": "Мисал: Разнорабочий"
       },
       "employer_address": {
-        "title": "📍 Иш берүүчүнүн юридикалык дареги: индекси, шаар, көчө, корпус, үй (Кириллицаны)",
+        "title": "📍 жумуш берүүчүнүн мыйзамдуу дарегин көрсөтүү: индекс, город, улица, корпус, дом (используйте кириллицу)",
         "example": "Мисал: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 Thin Сиздин калай",
-        "format": "Форматы: 10 же 12 сан",
+        "format": "Форматы: 10 или 12 цифр",
         "example": "Мисал: 7701234567"
       }
     },
@@ -62,7 +62,7 @@
     },
     "wa_polis_date": {
       "title": "📅 VHI саясатынын жарактуулук мөөнөтүн көрсөтүңүз",
-      "description": "Акциянын башынын башталышына жана аяктаганын төмөнкү форматына киргизиңиз: 06/15/2025 дан 06/14/2026 чейин"
+      "description": "Форматта иш-аракеттердин башталышы жана аяктоо датасын киргизиңиз: с 15.06.2025 по 14.06.2026"
     },
     "edit_wa_data": {
       "title": "📋 Ырастоо:",
