--- a/locales/tg.json
+++ b/locales/tg.json
@@ -42,12 +42,12 @@
         "example": "Мисол: Разнорабочий"
       },
       "employer_address": {
-        "title": "📍 Суроғаи ҳуқуқии корфармо дар формат қайд кунед: Индекси, шаҳр, кӯча, Корпусҳо (Cyrillic истифода)",
+        "title": "📍 Суроғаи ҳуқуқии корфармо дар формат қайд кунед: индекс, город, улица, корпус, дом (используйте кириллицу)",
         "example": "Мисол: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 Тасвири худро муайян кунед",
-        "format": "Формат: 10 ё 12 рақам",
+        "format": "Формат: 10 или 12 цифр",
         "example": "Мисол: 7701234567"
       }
     },
@@ -62,7 +62,7 @@
     },
     "wa_polis_date": {
       "title": "📅 Мӯҳлати амали сиёсати VHI-ро қайд кунед",
-      "description": "Санаҳои ибтидо ва охири амалро дар формат ворид кунед: аз 06/15/2025 то 06/14/2026"
+      "description": "Санаҳои оғоз ва охири амалро дар формат ворид кунед: с 15.06.2025 по 14.06.2026"
     },
     "edit_wa_data": {
       "title": "📋 Тасдиқ:",
