--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -42,12 +42,12 @@
         "example": "例子： Разнорабочий"
       },
       "employer_address": {
-        "title": "📍指定雇主的法律地址：索引，城市，街道，军团，房屋（使用西里尔）",
+        "title": "📍表示雇主的法律讲话以这种格式： индекс, город, улица, корпус, дом (используйте кириллицу)",
         "example": "例子： 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢指定您的锡",
-        "format": "格式：10或12位数字",
+        "format": "格式： 10 или 12 цифр",
         "example": "例子： 7701234567"
       }
     },
@@ -62,7 +62,7 @@
     },
     "wa_polis_date": {
       "title": "📅表示VHI政策的有效期",
-      "description": "以格式输入操作开始的日期：从06/15/2025到06/14/2026"
+      "description": "输入以该格式的起点和结束日期： с 15.06.2025 по 14.06.2026"
     },
     "edit_wa_data": {
       "title": "📋确认：",
